--- a/themes/maupassant/layout/base.pug
+++ b/themes/maupassant/layout/base.pug
@@ -18,7 +18,7 @@ html(lang=config.language)
 
   include _partial/head.pug
 
-  #global_loading_mask(style="background:rgba(255,255,255,0.8);width:100vw;height:100vh;z-index:99999;text-align:center;")
+  #global_loading_mask(style="background:rgba(255,255,255,0.9);width:100vw;height:100vh;position:fixed;text-align:center;")
     i.fa.fa-spinner.fa-pulse(style="font-size: 3em;margin-top: 50vh;")
 
   body: .body_container
