--- a/themes/maupassant/layout/archive.pug
+++ b/themes/maupassant/layout/archive.pug
@@ -12,7 +12,8 @@ block content
       h1.label-title=  __('reading_label', page.category || page.tag)
   .post
     .post-archive
-        each posts, year in page.posts.toArray().reduce((r, v, i, a, k = -v.date.format('YYYY')) => ((r[k] || (r[k] = [])).push(v), r), {})
+        //Use lodash to classify posts. See https://lodash.com/docs#groupBy
+        each posts, year in _.groupBy(page.posts.toArray(), function(p){return -p.date.format('YYYY')})
           h2= -year
           ul.listing
             for post in posts
