--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -5,8 +5,9 @@
   --lightFontColor: #666;
   --darkFontColor: #333;
   --bodyBgColor: #f6f6f7;
-  --headerBgColor:rgba(255,255,255,1)
-  --borderColor:#ddd
+  --headerBgColor:rgba(255,255,255,1);
+  --borderColor:#ddd;
+  --boxShadowColor:rgba(0, 0, 0, 0.25);
 }
 html{
   font-size: 1px;
@@ -73,10 +74,13 @@ a:focus {
 // 分页
 .page-navigator {
   list-style: none;
-  padding: 0 25px 2px;
+  padding: 10px 25px 2px;
   font-size: 14px;
   text-align: center;
   position: relative;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   .page-number {
     display: inline-block;
     margin: 0 5px 5px 0;
@@ -103,8 +107,6 @@ a:focus {
       }
     }
     &.next {
-      position: absolute;
-      right: 25px;
       &:after {
         font-family: "FontAwesome";
         content: "\f101";
@@ -143,7 +145,7 @@ a:focus {
     }
     font: bold 25px/1.1 "ff-tisa-web-pro", Cambria, "Times New Roman", Georgia, Times, sans-serif;
     a {
-      color: #555;
+      color: var(--fontColor);
     }
   }
   .post-meta {
@@ -206,7 +208,7 @@ a:focus {
     clear: left;
     font-size: 15px;
     line-height: 1.77;
-  color: var(--fontColor);
+    color: var(--fontColor);
     padding-top: 15px;
     text-align: justify;
     text-justify: distribute;
@@ -373,7 +375,7 @@ a:focus {
     #lighter-btn + label {
       display: none!important;
       margin-right: 20px;
-      background-color: #e6e6e6;
+      background-color: var(--borderColor);
       border-radius: 7px;
       cursor: pointer;
       display: inline-block;
@@ -388,7 +390,7 @@ a:focus {
     }
     #lighter-btn + label:after {
       display: none!important;
-      background-color: #fff;
+      background-color: var(--headerBgColor);
       border-radius: 50%;
       content: "";
       height: 12px;
@@ -466,8 +468,8 @@ a:focus {
     }
     h2 {
       margin: 1.4em 0 1.1em;
-      background-color:#000;
-      color:#fff;
+      background-color: var(--fontColor);
+      color: var( --headerBgColor);
       padding:2px 10px;
       width:fit-content;
       font-size:17px;
@@ -696,10 +698,6 @@ a:focus {
     margin-left: 10px;
     border-radius: 10px;
     box-sizing: border-box;
-    // transition: width 0.2s;
-    // -moz-transition: width 0.2s; /* Firefox 4 */
-    // -webkit-transition: width 0.2s; /* Safari 和 Chrome */
-    // -o-transition: width 0.2s; /* Opera */
     &:before {
       content: "";
       width: 0;
@@ -888,7 +886,7 @@ figure.highlight,
     margin: 0;
     // To override cursor attribute of `.tag` components
     cursor: text;
-    color: #ffffff;
+    color: var(--fontColor);
   }
   // To align line number and line of code regardless if there is a scroll bar or not
   .gutter,
@@ -916,8 +914,8 @@ figure.highlight,
   // Gutter which contains line numbers
   .gutter {
     // background: #f7f8f8;
-    color: #f7f8f8;
-    border-right: 1px solid #e6e6e6;
+    color: var(--fontColor);
+    border-right: 1px solid var(--borderColor);
     padding: 0.3em 15px;
   }
   // Code container
@@ -1452,6 +1450,13 @@ figure.highlight,
       color: #c678dd;
     }
   }
+}
+figure.highlight .code, .codeblock .code,
+figure.highlight .code pre, .codeblock .code pre{
+  width: fit-content!important;
+}
+figure.highlight table, .codeblock table{
+  background: var(--codeBgColor);
 }
 // Gist
 .gist {
